--- a/src/components/shared/FilterNavigatorBar.css
+++ b/src/components/shared/FilterNavigatorBar.css
@@ -38,6 +38,14 @@
 
 .filterNavigatorBarItemContent {
   overflow: hidden;
+
+  /* The 6px are used by the box-shadow when the button receives focus */
+  height: calc(100% - 6px);
+  padding: 0 6px 0 6px;
+  margin: 0;
+  border: none;
+  background: none;
+  color: var(--blue-60);
   text-overflow: ellipsis;
   white-space: nowrap;
 }
